force-app/main/default/objects/Contact/fields/Net_Term_Days__c.field-meta.xml
<CustomField>
    <fullName>Net_Term_Days__c</fullName>
    <description>Net Term days picklist from Salesforce</description>
    <label>Net Term Days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Net_Term_Days</valueSetName>
    </valueSet>
</CustomField>