force-app/main/default/objects/Contact/fields/Payment_Method_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Status__c</fullName>
    <description>Payment Method Status</description>
    <label>Payment Method Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>